<resources>
    <string name="a11y_no_data">No data</string>
    <string name="a11y_no_permission">No permission to access data</string>
    <string name="a11y_template_range">%1$f of %2$f</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_galaxy_music">About Galaxy Music</string>
    <string name="about_samsung_music">About Samsung Music</string>
    <string name="about_tos">SAMSUNG MUSIC TERMS OF SERVICE</string>
    <string name="about_tos_applicable_law">"12. Applicable Law
These TOS are governed by the laws of the jurisdiction where you are a resident, without regard to its conflict of law provisions. These TOS shall not be governed by the UN Convention on Contracts for the International Sale of Goods, the application of which is expressly excluded."</string>
    <string name="about_tos_compliance">"7. Compliance with Law
You acknowledge and agree to comply with any and all applicable laws and regulations in using the SERVICE including without limitation, all applicable export restriction laws and regulations."</string>
    <string name="about_tos_data_access">"6. Data Access
Some features of the SERVICE may require your mobile device to have access to the internet and may be subject to restrictions imposed by your network or internet provider. The SERVICE may require access through your mobile network, which may result in additional charges depending on your payment plan. In addition, your enjoyment of some features of the SERVICE may be affected by the suitability and performance of your device hardware or data access."</string>
    <string name="about_tos_disclaimer_of_warranty_1">"9. Disclaimer of Warranty
TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW, THE SERVICE IS PROVIDED “AS IS” AND ON AN “AS AVAILABLE” BASIS, WITHOUT WARRANTIES OF ANY KIND FROM SAMSUNG, EITHER EXPRESS OR IMPLIED. TO THE MAXIMUM EXTENT PERMITTED BY APPLICABLE LAW,, SAMSUNG DISCLAIMS ALL WARRANTIES EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY, SATISFACTORY QUALITY OR WORKMANLIKE EFFORT, FITNESS FOR A PARTICULAR PURPOSE, RELIABILITY OR AVAILABILITY, ACCURACY, LACK OF VIRUSES, QUIET ENJOYMENT, NON INFRINGEMENT OF THIRD PARTY RIGHTS OR OTHER VIOLATION OF RIGHTS."</string>
    <string name="about_tos_disclaimer_of_warranty_2">SOME JURISDICTIONS DO NOT ALLOW EXCLUSIONS OR LIMITATIONS OF IMPLIED WARRANTIES, SO THE ABOVE EXCLUSIONS OR LIMITATIONS MAY NOT APPLY TO YOU. NO ADVICE OR INFORMATION, WHETHER ORAL OR WRITTEN, OBTAINED BY YOU FROM SAMSUNG OR ITS AFFILIATES SHALL BE DEEMED TO ALTER THIS DISCLAIMER BY SAMSUNG OF WARRANTY REGARDING THE SERVICE, OR TO CREATE ANY WARRANTY OF ANY SORT FROM SAMSUNG. IN ADDITION, SAMSUNG AND ITS AFFILIATES DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THIRD PARTY SERVICES, ADVERTISEMENTS, CONTENT, OR ANY OTHER PRODUCT OR SERVICE ADVERTISED OR OFFERED BY A THIRD PARTY ON OR THROUGH THE SERVICE.</string>
    <string name="about_tos_dispute_resolution">"13. Dispute Resolution
If a dispute, controversy or difference arising in any way from these TOS or your use of the SERVICE is not amicably settled, it shall be subject arbitration proceedings under the arbitration rules of the International Chamber of Commerce in the place of the respondent. Notwithstanding the foregoing, Samsung may apply for injunctive remedies (or an equivalent type of urgent legal relief) in any court of competent jurisdiction."</string>
    <string name="about_tos_entire_agreement">"14. Entire Agreement
These TOS are the entire agreement between you and Samsung relating to the SERVICE and supersede all prior or contemporaneous oral or written communications, proposals and representations with respect to the SERVICE or any other subject matter covered by these TOS. If any provision of these TOS is held to be void, invalid, unenforceable or illegal, the other provisions shall continue in full force and effect."</string>
    <string name="about_tos_grant_of_license_1">"1. Grant of License
Subject to the terms of these TOS, you are granted a limited, non-exclusive, and revocable license to install, access and use the SERVICE. The services and features provided by the SERVICE or Update (defined below) thereto may vary or be limited depending on certain factors, including, without limitation, your country, device, operating system, or network operator. If you are 13 or older but under the age of 18, you represent that you have reviewed these TOS with your parent or legal guardian and that you and your parent or guardian understands and consents to the terms and conditions of these TOS."</string>
    <string name="about_tos_grant_of_license_2">If you are a parent or guardian permitting a person under the age of 18 (“Minor”) to use the SERVICE, you agree to: (i) supervise the Minor’s use of the SERVICE; (ii) assume all risks associated with the Minor’s use of the SERVICE, (iii) assume any liability resulting from the Minor’s use of the SERVICE; (iv) ensure the accuracy and truthfulness of all information submitted by the Minor; and (v) assume responsibility and are bound by this Agreement for the Minor’s access and use of the SERVICE.</string>
    <string name="about_tos_imporant_1">IMPORTANT – READ CAREFULLY. THESE TERMS OF SERVICE (“TOS”) ARE A LEGAL AGREEMENT BETWEEN YOU AND SAMSUNG ELECTRONICS CO., LTD. AND ITS AFFILIATES (COLLECTIVELY, “SAMSUNG”) FOR THE VIDEO AND ANY RELEVANT SOFTWARE OR DOCUMENTATION THEREOF (COLLECTIVELY, THE “SERVICE”) PROVIDED BY SAMSUNG OR ITS THIRD PARTY SUPPLIERS OR LICENSORS. BY AGREEING TO THESE TOS OR BY INSTALLING OR OTHERWISE USING THE SERVICE, YOU AGREE TO BE BOUND BY THESE TOS. IF YOU DO NOT AGREE TO THE TOS, THEN DO NOT INSTALL OR USE THE SERVICE.</string>
    <string name="about_tos_imporant_1_jpn">IMPORTANT – READ CAREFULLY. THESE TERMS OF SERVICE (“TOS”) ARE A LEGAL AGREEMENT BETWEEN YOU AND SAMSUNG ELECTRONICS CO., LTD. AND ITS AFFILIATES (COLLECTIVELY, “SAMSUNG”) FOR THE GALAXY MUSIC APPLICATION AND ANY RELEVANT SOFTWARE OR DOCUMENTATION THEREOF (COLLECTIVELY, THE “SERVICE”) PROVIDED BY SAMSUNG OR ITS THIRD PARTY SUPPLIERS OR LICENSORS. BY AGREEING TO THESE TOS OR BY INSTALLING OR OTHERWISE USING THE SERVICE, YOU AGREE TO BE BOUND BY THESE TOS. IF YOU DO NOT AGREE TO THESE TOS, THEN DO NOT INSTALL OR USE THE SERVICE.</string>
    <string name="about_tos_imporant_2">Samsung Music is a music player application that allows a seamless and easy playlist management. With Samsung Music, you can play your music according to various categories, such as genre, artist and etc.</string>
    <string name="about_tos_imporant_2_jpn">Galaxy Music is a music player application that allows a seamless and easy playlist management. With Galaxy Music, you can play your music according to various categories, such as genre, artist and etc.</string>
    <string name="about_tos_indemnification">"11. Indemnification
You agree to indemnify, defend, and hold harmless SAMSUNG, its contractors, employees, and agents from any claims, losses, damages, liabilities (including legal fees and expenses) arising out of your use of the SERVICE, your violation of the rights of any third party, or any breach of these TOS."</string>
    <string name="about_tos_jpn">GALAXY MUSIC TERMS OF SERVICE</string>
    <string name="about_tos_liability_1">"10. Limitation of Liability
SAMSUNG WILL NOT BE LIABLE FOR ANY DAMAGES OF ANY KIND ARISING OUT OF OR RELATING TO THE USE OR THE INABILITY TO USE THE SERVICE, ITS CONTENT OR FUNCTIONALITY, INCLUDING, BUT NOT LIMITED TO, DAMAGES CAUSED BY OR RELATED TO ERRORS, OMISSIONS, INTERRUPTIONS, DEFECTS, DELAY IN OPERATION OR TRANSMISSION, COMPUTER VIRUS, FAILURE TO CONNECT, NETWORK CHARGES, AND ALL OTHER DIRECT, INDIRECT, SPECIAL, INCIDENTAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES EVEN IF SAMSUNG HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OR LIMITATION OF INCIDENTAL OR CONSEQUENTIAL DAMAGES, SO THE ABOVE EXCLUSIONS OR LIMITATIONS MAY NOT APPLY TO YOU."</string>
    <string name="add">Add</string>
    <string name="add_shortcut_on_home_screen">Add shortcut on home screen</string>
    <string name="album">Album</string>
    <string name="album_artist">Album artist</string>
    <string name="artist">Artist</string>
    <string name="brand_name">Samsung Music</string>
    <string name="brand_name_for_jpn">Galaxy Music</string>
    <string name="disc_number_text">Disc number</string>
    <string name="download">Download</string>
    <string name="encoding_type">Encoding type</string>
    <string name="genre">Genre</string>
    <string name="import_playlists">Import playlists</string>
    <string name="melon_info">Melon Information</string>
    <string name="melon_personal_inquiry">1:1 questions</string>
    <string name="menu_create_playlist">Create playlist</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_melon_import">Import Favorites/playlists</string>
    <string name="menu_play">Play</string>
    <string name="menu_sound_quality_and_effects">Sound quality and effects</string>
    <string name="milk_products_tab">Subscriptions</string>
    <string name="no_playlist_create_playlist">"Create some playlists, and they'll appear here."</string>
    <string name="no_playlist_import">You can also get saved playlists from your internal storage.</string>
    <string name="no_queued_tracks">No queued tracks</string>
    <string name="now_playing">Now playing</string>
    <string name="recording_date">Recording date</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="short_app_name">Music</string>
    <string name="title">Title</string>
    <string name="track_number">Track number</string>
    <string name="tts_go_to_music">Go to Music</string>
    <string name="tts_next">Next</string>
    <string name="tts_play">Play</string>
    <string name="tts_previous">Previous</string>
</resources>