<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/music_ic_ab_ticket"
        android:id="@id/menu_launch_product"
        android:title="@string/milk_products_tab"
        app:showAsAction="always" />
    <group
        android:id="@id/menu_more_group">
        <item
            android:id="@id/menu_melon_info"
            android:visible="false"
            android:title="@string/melon_info" />
        <item
            android:id="@id/menu_melon_import"
            android:visible="false"
            android:title="@string/menu_melon_import" />
        <item
            android:id="@id/menu_sound_alive"
            android:title="@string/menu_sound_quality_and_effects" />
        <item
            android:id="@id/menu_launch_setting"
            android:title="@string/settings" />
        <item
            android:id="@id/menu_melon_personal_inquiry"
            android:visible="false"
            android:title="@string/melon_personal_inquiry" />
    </group>
</menu>