<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@id/menu_group_bottom_bar">
        <item
            android:icon="@drawable/music_bottombar_ic_play"
            android:id="@id/menu_play_bottom_bar"
            android:title="@string/menu_play" />
        <item
            android:icon="@drawable/music_bottombar_ic_add"
            android:id="@id/add_to_bottom_bar"
            android:title="@string/add"
            app:showAsAction="never" />
        <item
            android:icon="@drawable/music_bottombar_ic_download"
            android:id="@id/menu_download_bottom_bar"
            android:title="@string/download"
            app:showAsAction="never" />
    </group>
</menu>