<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@color/edge_panel_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_gravity="center_horizontal"
        android:id="@id/album_art"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/edge_panel_album_art_default"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/tts_go_to_music" />
    <ImageButton
        android:theme="@style/Theme.AppCompat.DayNight"
        android:id="@id/play_pause_btn"
        android:background="@drawable/ripple_button_oval"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="@dimen/edge_panel_control_button_size"
        android:layout_height="@dimen/edge_panel_control_button_size"
        android:src="@drawable/music_mini_player_ic_control_play"
        android:tint="@color/basics_icon"
        android:layout_below="@id/artist"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/tts_play"
        android:layout_marginStart="@dimen/edge_panel_control_button_margin_horizontal"
        android:layout_marginEnd="@dimen/edge_panel_control_button_margin_horizontal" />
    <ImageButton
        android:theme="@style/Theme.AppCompat.DayNight"
        android:id="@id/prev_btn"
        android:background="@drawable/ripple_button_oval"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="@dimen/edge_panel_control_button_size"
        android:layout_height="@dimen/edge_panel_control_button_size"
        android:src="@drawable/music_mini_player_ic_control_prev"
        android:tint="@color/basics_icon"
        android:layout_toLeftOf="@id/play_pause_btn"
        android:layout_below="@id/artist"
        android:contentDescription="@string/tts_previous" />
    <ImageButton
        android:theme="@style/Theme.AppCompat.DayNight"
        android:id="@id/next_btn"
        android:background="@drawable/ripple_button_oval"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="@dimen/edge_panel_control_button_size"
        android:layout_height="@dimen/edge_panel_control_button_size"
        android:src="@drawable/music_mini_player_ic_control_next"
        android:tint="@color/basics_icon"
        android:layout_toRightOf="@id/play_pause_btn"
        android:layout_below="@id/artist"
        android:contentDescription="@string/tts_next" />
    <LinearLayout
        android:gravity="center"
        android:id="@id/title_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_panel_control_info_margin_top"
        android:layout_below="@id/album_art"
        android:layout_marginStart="5.0dip"
        android:layout_marginEnd="5.0dip">
        <TextView
            android:id="@id/text_adult"
            android:layout_marginEnd="@dimen/edge_panel_adult_icon_padding_end"
            style="@style/ListItem.Status.Adult" />
        <TextView
            android:textSize="@dimen/edge_panel_text_size_big"
            android:textColor="@color/edge_panel_text"
            android:ellipsize="marquee"
            android:id="@id/title"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_queued_tracks"
            android:textAlignment="center"
            style="@style/Font.NewSEC.400.Marquee" />
    </LinearLayout>
    <ListView
        android:theme="@style/AppWidget.ListStyle"
        android:id="@id/card_list"
        android:scrollbars="none"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/edge_panel_card_view_margin_top"
        android:layout_marginBottom="@dimen/edge_panel_card_view_margin_bottom"
        android:divider="@null"
        android:layout_above="@id/edge_panel_shortcut_btn"
        android:layout_below="@id/play_pause_btn"
        android:requiresFadingEdge="none"
        android:layout_marginStart="@dimen/edge_panel_card_view_margin_horizontal"
        android:layout_marginEnd="@dimen/edge_panel_card_view_margin_horizontal" />
    <TextView
        android:textSize="@dimen/edge_panel_shortcut_text_size"
        android:textColor="@color/edge_panel_text"
        android:gravity="center"
        android:id="@id/edge_panel_shortcut_btn"
        android:background="@drawable/edge_panel_shortcut_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="@dimen/edge_panel_shortcut_button_width"
        android:layout_height="@dimen/edge_panel_shortcut_button_height"
        android:layout_marginBottom="@dimen/edge_panel_shortcut_button_margin_bottom"
        android:text="@string/brand_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:paddingStart="10.0dip"
        android:paddingEnd="10.0dip"
        android:layout_marginStart="@dimen/edge_panel_shortcut_button_margin_horizontal"
        android:layout_marginEnd="@dimen/edge_panel_shortcut_button_margin_horizontal"
        style="@style/Font.NewSEC.600" />
    <TextView
        android:textSize="@dimen/edge_panel_text_size_small"
        android:textColor="@color/edge_panel_sub_text"
        android:ellipsize="marquee"
        android:id="@id/artist"
        android:focusable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edge_panel_info_margin_between"
        android:layout_marginBottom="@dimen/edge_panel_info_margin_bottom"
        android:text="@string/artist"
        android:layout_below="@id/title_container"
        android:textAlignment="center"
        android:layout_marginStart="5.0dip"
        android:layout_marginEnd="5.0dip"
        style="@style/Font.NewSEC.400.Marquee" />
</RelativeLayout>